<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color"
    android:id="@+id/top_view">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/first_name_label" />

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_field"
            android:textSize="@dimen/abc_text_size_large_material"
            android:singleLine="true"
            android:textColor="@color/edit_text_color"
            android:imeOptions="actionDone" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/last_name_label" />

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_field"
            android:textSize="@dimen/abc_text_size_large_material"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColor="@color/edit_text_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/team_label" />

        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/team_field"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_large_material"
            android:imeOptions="actionDone"
            android:textColor="@color/edit_text_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/uniform_number_label" />

        <EditText
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:id="@+id/uniform_num_field"
            android:textSize="@dimen/abc_text_size_large_material"
            android:singleLine="true"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:textColor="@color/edit_text_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/populate_button_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:text="@string/populate_players_button" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_player_button_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:text="@string/add_player_button" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_player_button"
            android:id="@+id/find_player_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_player_button"
            android:id="@+id/remove_player_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_database_button"
            android:id="@+id/clear_database_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/goals_label" />

        <EditText
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/goals_field"
            android:singleLine="true"
            android:focusable="false"
            android:editable="false"
            android:textColor="@color/edit_text_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yellow_cards_label" />

        <EditText
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/yellow_cards_field"
            android:singleLine="true"
            android:focusable="false"
            android:editable="false"
            android:textColor="@color/edit_text_color" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/red_cards_label" />

        <EditText
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/red_cards_field"
            android:singleLine="true"
            android:focusable="false"
            android:editable="false"
            android:textColor="@color/edit_text_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>


    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incr_goal_button"
            android:id="@+id/incr_goal_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incr_yellow_card_button"
            android:id="@+id/incr_yellow_card_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incr_red_card_button"
            android:id="@+id/incr_red_card_button_widget"
            android:background="@color/button_color" />


        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_players_button"
            android:id="@+id/count_players_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />
        <EditText
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/player_count_field"
            android:singleLine="true"
            android:focusable="false"
            android:editable="false"
            android:textColor="@color/edit_text_color" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/team_label"
            android:id="@+id/textView" />

        <Spinner
            android:layout_width="250sp"
            android:layout_height="50sp"
            android:id="@+id/team_spinner"
            android:layout_weight="0"
            android:background="#c0ffc0" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_player_button"
            android:id="@+id/first_player_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_player_button"
            android:id="@+id/next_player_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />


    </LinearLayout>


    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_button"
            android:id="@+id/read_button_widget"
            android:background="@color/button_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_button"
            android:id="@+id/write_button_widget"
            android:background="@color/button_color" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/file_label"
            android:id="@+id/textView2" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <EditText
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/file_name_field"
            android:textSize="@dimen/abc_text_size_large_material"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColor="@color/edit_text_color" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

</LinearLayout>
